Added footer info

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind utilities;
 @tailwind components;
+
+.link {
+  @apply font-bold hover:text-neogreen-300 transition-colors text-sm
+}
